fixes bottom links being cut off

--- a/src/css/includes/view.less
+++ b/src/css/includes/view.less
@@ -62,6 +62,9 @@ main {
 		}
 	}
 	nav {
+	  position: relative;
+	  z-index: 200;
+	  width: 85%;
     margin-bottom: 0px;	
     @media screen and (max-width: 667px) {
       margin-top: 25px;
